[package]
name = "webhere"
version = "0.1.4"
homepage = "https://github.com/jeremychone/rust-webdev"
description = "Deprecated. Move to webdev"
repository = "https://github.com/jeremychone/rust-webdev"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
keywords = [
	"web",
	"localfolder",
	"development",
  "localhost"
]
categories = ["development-tools"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
pathdiff = "0.2"
clap =  {version = "3", features = ["cargo"]}
futures = "0.3"
notify = "4"